--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
